--- a/internals/applications/trino.yaml
+++ b/internals/applications/trino.yaml
@@ -14,6 +14,10 @@ spec:
     targetRevision: main
     helm:
       releaseName: trino
+      valueFiles:
+        - values.yaml
+        - values-coordinator.yaml
+        - values-worker.yaml  
       values: |
         server:
           workers: 3
