--- a/internals/applications/trino.yaml
+++ b/internals/applications/trino.yaml
@@ -19,6 +19,8 @@ spec:
         - values-coordinator.yaml
         - values-worker.yaml  
       values: |
+        image:
+          repository: harbor.ingtra.net/dockerhub/trinodb/trino
         server:
           workers: 6
           coordinatorExtraConfig: |
