--- a/benthos/twitter-referenced-media-to-yugabyte.yaml
+++ b/benthos/twitter-referenced-media-to-yugabyte.yaml
@@ -26,7 +26,7 @@ spec:
             size: 1
     output:
       sql:
-        driver: postgresql
+        driver: postgres
         data_source_name: yugabyte:yugabyte@tcp(yugabyte-1.mdc.ingtra.net:5433)/yugabyte
         query: INSERT INTO twitter.referenced_media VALUE json_populate_record(null::twitter.referenced_media, '?')
         args_mapping: root = [ this ]
