--- a/benthos/twitter-referenced-media-to-yugabyte.yaml
+++ b/benthos/twitter-referenced-media-to-yugabyte.yaml
@@ -27,7 +27,7 @@ spec:
     output:
       sql:
         driver: postgres
-        data_source_name: yugabyte:yugabyte@tcp(yugabyte-1.mdc.ingtra.net:5433)/yugabyte
+        data_source_name: postgres://yugabyte:yugabyte@yugabyte-1.mdc.ingtra.net:5433/yugabyte?sslmode=disable
         query: INSERT INTO twitter.referenced_media VALUE json_populate_record(null::twitter.referenced_media, '?')
         args_mapping: root = [ this ]
         batching:
