--- a/benthos/twitter-referenced-media-to-yugabyte.yaml
+++ b/benthos/twitter-referenced-media-to-yugabyte.yaml
@@ -28,7 +28,10 @@ spec:
       sql:
         driver: postgres
         data_source_name: postgres://yugabyte:yugabyte@yugabyte-1.mdc.ingtra.net:5433/yugabyte?sslmode=disable
-        query: INSERT INTO twitter.referenced_media VALUE json_populate_record(null::twitter.referenced_media, '?')
+        query: |
+          INSERT INTO twitter.referenced_media
+          VALUES json_populate_record(null::twitter.referenced_media, '?')
+          ON CONFLICT DO NOTHING
         args_mapping: root = [ this ]
         batching:
           count: 10
