change log level to all

--- a/benthos/twitter-referenced-media-to-yugabyte.yaml
+++ b/benthos/twitter-referenced-media-to-yugabyte.yaml
@@ -7,7 +7,7 @@ spec:
   replicas: 1
   configInline:
     logger:
-      level: DEBUG
+      level: ALL
       format: json
       add_timestamp: true
     input:
