--- a/benthos/twitter-referenced-places-to-yugabyte.yaml
+++ b/benthos/twitter-referenced-places-to-yugabyte.yaml
@@ -1,7 +1,7 @@
 apiVersion: ingtra.net/v1alpha1
 kind: BenthosPipeline
 metadata:
-  name: twitter-referenced-media-to-yugabyte
+  name: twitter-referenced-places-to-yugabyte
 spec:
   image: harbor.ingtra.net/dockerhub/jeffail/benthos:3.64-cgo
   replicas: 1
@@ -15,8 +15,8 @@ spec:
         addresses: ["redpanda.mdc.ingtra.net:9092"]
         target_version: 2.8.1
         topics:
-          - data.twitter.referenced-media.1
-        consumer_group: benthos-twitter-referenced-media-to-yugabyte
+          - data.twitter.referenced-places.1
+        consumer_group: benthos-twitter-referenced-places-to-yugabyte
         batching:
           count: 128
           period: 10s
@@ -25,8 +25,8 @@ spec:
         driver: postgres
         data_source_name: postgres://yugabyte:yugabyte@yugabyte-1.mdc.ingtra.net:5433/yugabyte?sslmode=disable
         query: |
-          INSERT INTO twitter.referenced_media
+          INSERT INTO twitter.referenced_places
           SELECT *
-          FROM json_populate_record(null::twitter.referenced_media, $1::json)
+          FROM json_populate_record(null::twitter.referenced_places, $1::json)
           ON CONFLICT DO NOTHING
         args_mapping: root = [ this.string() ]
