--- a/benthos/twitter-sampled-stream-to-yugabyte.yaml
+++ b/benthos/twitter-sampled-stream-to-yugabyte.yaml
@@ -1,7 +1,7 @@
 apiVersion: ingtra.net/v1alpha1
 kind: BenthosPipeline
 metadata:
-  name: twitter-referenced-tweets-to-yugabyte
+  name: twitter-sampled-stream-to-yugabyte
 spec:
   image: harbor.ingtra.net/dockerhub/jeffail/benthos:3.64-cgo
   replicas: 1
@@ -15,8 +15,8 @@ spec:
         addresses: ["redpanda.mdc.ingtra.net:9092"]
         target_version: 2.8.1
         topics:
-          - data.twitter.referenced-tweets.1
-        consumer_group: benthos-twitter-referenced-tweets-to-yugabyte
+          - data.twitter.sampled-stream.1
+        consumer_group: benthos-twitter-sampled-stream-to-yugabyte
         batching:
           count: 128
           period: 10s
@@ -25,8 +25,7 @@ spec:
         driver: postgres
         data_source_name: postgres://yugabyte:yugabyte@yugabyte-1.mdc.ingtra.net:5433/yugabyte?sslmode=disable
         query: |
-          INSERT INTO twitter.referenced_tweets
-          SELECT *
-          FROM json_populate_record(null::twitter.referenced_tweets, $1::json)
+          INSERT INTO twitter.sampled_stream
+          VALUES ($1, $2::jsonb)
           ON CONFLICT DO NOTHING
-        args_mapping: root = [ this.string() ]
+        args_mapping: root = [ this.data.id, this.string() ]
