--- a/benthos/twitter-sampled-stream-to-yugabyte.yaml
+++ b/benthos/twitter-sampled-stream-to-yugabyte.yaml
@@ -22,6 +22,8 @@ spec:
           period: 10s
     pipeline:
       processors:
+        - split:
+            size: 100
         - bloblang: |
             root = if this.exists("error") {
               deleted()
