use greedy output

--- a/benthos/twitter-sampled-stream-to-yugabyte.yaml
+++ b/benthos/twitter-sampled-stream-to-yugabyte.yaml
@@ -31,12 +31,30 @@ spec:
               this
             }
     output:
-      sql:
-        driver: postgres
-        data_source_name: postgres://yugabyte:yugabyte@yugabyte-3.mdc.ingtra.net:5433/yugabyte?sslmode=disable&connect_timeout=10
-        query: |
-          INSERT INTO twitter.sampled_stream
-          VALUES ($1, regexp_replace($2, '\\u0000', '', 'g')::jsonb)
-          ON CONFLICT DO NOTHING
-        args_mapping: root = [ this.data.id, this.string() ]
-        max_in_flight: 5
+      broker:
+        pattern: greedy
+        outputs:
+          - sql:
+              driver: postgres
+              data_source_name: postgres://yugabyte:yugabyte@yugabyte-1.mdc.ingtra.net:5433/yugabyte?sslmode=disable&connect_timeout=10
+              query: |
+                INSERT INTO twitter.sampled_stream
+                VALUES ($1, regexp_replace($2, '\\u0000', '', 'g')::jsonb)
+                ON CONFLICT DO NOTHING
+              args_mapping: root = [ this.data.id, this.string() ]
+          - sql:
+              driver: postgres
+              data_source_name: postgres://yugabyte:yugabyte@yugabyte-2.mdc.ingtra.net:5433/yugabyte?sslmode=disable&connect_timeout=10
+              query: |
+                INSERT INTO twitter.sampled_stream
+                VALUES ($1, regexp_replace($2, '\\u0000', '', 'g')::jsonb)
+                ON CONFLICT DO NOTHING
+              args_mapping: root = [ this.data.id, this.string() ]
+          - sql:
+              driver: postgres
+              data_source_name: postgres://yugabyte:yugabyte@yugabyte-3.mdc.ingtra.net:5433/yugabyte?sslmode=disable&connect_timeout=10
+              query: |
+                INSERT INTO twitter.sampled_stream
+                VALUES ($1, regexp_replace($2, '\\u0000', '', 'g')::jsonb)
+                ON CONFLICT DO NOTHING
+              args_mapping: root = [ this.data.id, this.string() ]
