--- a/benthos/twitter-sampled-stream-to-yugabyte.yaml
+++ b/benthos/twitter-sampled-stream-to-yugabyte.yaml
@@ -33,9 +33,9 @@ spec:
       broker:
         pattern: greedy
         outputs:
-          - sql:
+          - sql_raw:
               driver: postgres
-              data_source_name: postgres://yugabyte:yugabyte@yugabyte-1.mdc.ingtra.net:5433/yugabyte?sslmode=disable&connect_timeout=10
+              dsn: postgres://yugabyte:yugabyte@yugabyte-1.mdc.ingtra.net:5433/yugabyte?sslmode=disable&connect_timeout=10
               query: |
                 INSERT INTO twitter.sampled_stream
                 VALUES ($1, regexp_replace($2, '\\u0000', '', 'g')::jsonb)
@@ -44,7 +44,7 @@ spec:
               max_in_flight: 1
           - sql:
               driver: postgres
-              data_source_name: postgres://yugabyte:yugabyte@yugabyte-2.mdc.ingtra.net:5433/yugabyte?sslmode=disable&connect_timeout=10
+              dsn: postgres://yugabyte:yugabyte@yugabyte-2.mdc.ingtra.net:5433/yugabyte?sslmode=disable&connect_timeout=10
               query: |
                 INSERT INTO twitter.sampled_stream
                 VALUES ($1, regexp_replace($2, '\\u0000', '', 'g')::jsonb)
@@ -53,7 +53,7 @@ spec:
               max_in_flight: 1
           - sql:
               driver: postgres
-              data_source_name: postgres://yugabyte:yugabyte@yugabyte-3.mdc.ingtra.net:5433/yugabyte?sslmode=disable&connect_timeout=10
+              dsn: postgres://yugabyte:yugabyte@yugabyte-3.mdc.ingtra.net:5433/yugabyte?sslmode=disable&connect_timeout=10
               query: |
                 INSERT INTO twitter.sampled_stream
                 VALUES ($1, regexp_replace($2, '\\u0000', '', 'g')::jsonb)
