--- a/benthos/twitter-sampled-stream-to-yugabyte.yaml
+++ b/benthos/twitter-sampled-stream-to-yugabyte.yaml
@@ -42,7 +42,7 @@ spec:
                 ON CONFLICT DO NOTHING
               args_mapping: root = [ this.data.id, this.string() ]
               max_in_flight: 1
-          - sql:
+          - sql_raw:
               driver: postgres
               dsn: postgres://yugabyte:yugabyte@yugabyte-2.mdc.ingtra.net:5433/yugabyte?sslmode=disable&connect_timeout=10
               query: |
@@ -51,7 +51,7 @@ spec:
                 ON CONFLICT DO NOTHING
               args_mapping: root = [ this.data.id, this.string() ]
               max_in_flight: 1
-          - sql:
+          - sql_raw:
               driver: postgres
               dsn: postgres://yugabyte:yugabyte@yugabyte-3.mdc.ingtra.net:5433/yugabyte?sslmode=disable&connect_timeout=10
               query: |
