--- a/benthos/twitter-sampled-stream-to-yugabyte.yaml
+++ b/benthos/twitter-sampled-stream-to-yugabyte.yaml
@@ -3,7 +3,7 @@ kind: BenthosPipeline
 metadata:
   name: twitter-sampled-stream-to-yugabyte
 spec:
-  image: harbor.ingtra.net/dockerhub/jeffail/benthos:3.65-cgo
+  image: harbor.ingtra.net/dockerhub/jeffail/benthos:3.64-cgo
   replicas: 1
   configInline:
     logger:
@@ -19,7 +19,7 @@ spec:
         consumer_group: benthos-twitter-sampled-stream-to-yugabyte-3
         checkpoint_limit: 1
         batching:
-          count: 1000
+          count: 10000
           period: 10s
     pipeline:
       processors:
@@ -33,27 +33,27 @@ spec:
       broker:
         pattern: greedy
         outputs:
-          - sql_raw:
+          - sql:
               driver: postgres
-              dsn: postgres://yugabyte:yugabyte@yugabyte-1.mdc.ingtra.net:5433/yugabyte?sslmode=disable&connect_timeout=10
+              data_source_name: postgres://yugabyte:yugabyte@yugabyte-1.mdc.ingtra.net:5433/yugabyte?sslmode=disable&connect_timeout=10
               query: |
                 INSERT INTO twitter.sampled_stream
                 VALUES ($1, regexp_replace($2, '\\u0000', '', 'g')::jsonb)
                 ON CONFLICT DO NOTHING
               args_mapping: root = [ this.data.id, this.string() ]
               max_in_flight: 1
-          - sql_raw:
+          - sql:
               driver: postgres
-              dsn: postgres://yugabyte:yugabyte@yugabyte-2.mdc.ingtra.net:5433/yugabyte?sslmode=disable&connect_timeout=10
+              data_source_name: postgres://yugabyte:yugabyte@yugabyte-2.mdc.ingtra.net:5433/yugabyte?sslmode=disable&connect_timeout=10
               query: |
                 INSERT INTO twitter.sampled_stream
                 VALUES ($1, regexp_replace($2, '\\u0000', '', 'g')::jsonb)
                 ON CONFLICT DO NOTHING
               args_mapping: root = [ this.data.id, this.string() ]
               max_in_flight: 1
-          - sql_raw:
+          - sql:
               driver: postgres
-              dsn: postgres://yugabyte:yugabyte@yugabyte-3.mdc.ingtra.net:5433/yugabyte?sslmode=disable&connect_timeout=10
+              data_source_name: postgres://yugabyte:yugabyte@yugabyte-3.mdc.ingtra.net:5433/yugabyte?sslmode=disable&connect_timeout=10
               query: |
                 INSERT INTO twitter.sampled_stream
                 VALUES ($1, regexp_replace($2, '\\u0000', '', 'g')::jsonb)
