--- a/internals/applications/trino.yaml
+++ b/internals/applications/trino.yaml
@@ -50,11 +50,13 @@ spec:
                         values: ["worker"]
                   topologyKey: "kubernetes.io/hostname"
         additionalCatalogs:
-          yugabyte: |
-            connector.name=postgresql
-            connection-url=jdbc:postgresql://yugabyte-t-3.mdc.ingtra.net:5433/yugabyte
-            connection-user=yugabyte
-            connection-password=yugabyte
+          iceberg: |
+            connector.name=iceberg
+            hive.metastore.uri=thrift://hive-metastore.mdc.ingtra.net:9083
+            hive.s3.aws-access-key=trino
+            hive.s3.aws-secret-key=trinouser
+            hive.s3.endpoint=http://minio.mdc.ingtra.net
+            hive.s3.ssl.enabled=false
         additionalConfigProperties:
           - spill-enabled=true
           - spiller-spill-path=/tmp
