--- a/spark-streaming/twitter-sampled-tweets.yaml
+++ b/spark-streaming/twitter-sampled-tweets.yaml
@@ -19,11 +19,13 @@ spec:
         type: Directory
   driver:
     cores: 1
+    coreRequest: 100m
     memory: "512m"
     labels:
       version: 3.2.1
   executor:
     cores: 1
+    coreRequest: 100m
     instances: 1
     memory: "512m"
     labels:
