--- a/spark-streaming/spark-driver-role-binding.yaml
+++ b/spark-streaming/spark-driver-role-binding.yaml
@@ -5,8 +5,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: default
-    apiGroup: rbac.authorization.k8s.io
-roleRef:
+    apiGroup: ""
   kind: ClusterRole
   name: edit
   apiGroup: rbac.authorization.k8s.io
