--- a/internals/applications/spark-streaming.yaml
+++ b/internals/applications/spark-streaming.yaml
@@ -14,3 +14,5 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: spark-streaming
+  ignoreDifferences:
+    - kind: Pod
