--- a/spark-streaming/twitter-sampled-tweets.yaml
+++ b/spark-streaming/twitter-sampled-tweets.yaml
@@ -13,7 +13,7 @@ spec:
     - http://minio.mdc.ingtra.net/bins/sparking/configs/twitter/streaming_sampled_tweets.yaml
   sparkVersion: 3.2.1
   restartPolicy:
-    type: OnFailure
+    type: Always
   driver:
     cores: 1
     coreRequest: 100m
