--- a/internals/applications/trino.yaml
+++ b/internals/applications/trino.yaml
@@ -77,6 +77,7 @@ spec:
             connection-user=trino
             connection-password=trino
             decimal-mapping=allow_overflow
+            decimal-default-scale=10
         additionalConfigProperties:
           - spill-enabled=true
           - spiller-spill-path=/tmp
