--- a/internals/applications/superset.yaml
+++ b/internals/applications/superset.yaml
@@ -30,6 +30,7 @@ spec:
               'CACHE_REDIS_PORT': 6379,
               'CACHE_REDIS_DB': 2
             }
+        initContainers: []
         postgresql:
           enabled: false
         redis:
